[package]
name = "koukoku-ws-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3.28"
log = "0.4.20"
miniserde = "0.1.34"
pretty_env_logger = "0.5.0"
tokio = { version = "1.32.0", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
tokio-rustls = "0.24.1"
tower-http = { version = "0.4.4", features = ["fs"], optional = true }
webpki-roots = "0.25.2"

[features]
default = ["serve-ui"]
serve-ui = ["dep:tower-http"]
